<resources>
    <string name="app_name">Russian Language - Step by Step</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="confirmationText">Вы не ответили на все вопросы.\n\nВы действительно хотите закончить выполнение?\nПропущенные вопросы будут засчитаны, как неверные.</string>

    <string name="agreeText">Дальше</string>
    <string name="disagreeText">Остаться</string>
    <string name="clearText">Понятно</string>
    <string name="tempText">tempText</string>
    <string name="tempEditText">_____ tempText</string>

    <string name="remember">Запомните!</string>
    <string name="reading_rule">Правило чтения:</string>

    <!-- Урок 2, фонетика, задание 1 -->
    <string name="name_letter_sound">Назовите букву и звук</string>

    <!-- Урок 2, фонетика, задание 2 -->
    <string name="listen_repeat_readSyllables">Слушайте. Повторяйте. Читайте слоги</string>

    <!-- Урок 2, фонетика, задание 3 -->
    <string name="listen_repeat_readWords">Слушайте. Повторяйте. Читайте слова</string>

    <!-- Урок 2, фонетика, задание 4 -->
    <string name="ach">ач=ачь [ач\']</string>
    <string name="hard_ach">мяч [м\'ач\']</string>
    <string name="soft_ach">дочь [доч\']</string>

    <!-- Урок 2, фонетика, задание 5 -->
    <string name="letter_e">e</string>
    <string name="reading_e">[е]\n\nбиле́т\n[б'ил'э́т]</string>
    <string name="reading_i">[и]\n\nсестра́\n[с'истра́]</string>

    <!-- Урок 3, фонетика, задание 4 -->
    <string name="phonetics3_task4_text">Посмотрите на рисунки. Задайте вопрос и ответьте по модели. Следите за правильной интонацией</string>
    <string name="phonetics3_task4_model">Модель: бабушка (дедушка) - Это бабушка или дедушка? Это бабушка</string>

    <!-- Урок 3, фонетика, задание 3 -->
    <string name="phonetics3_task3_text">Прослушайте вопросы и ответьте на них отрицательно. Используйте слова, данные в скобках. Следите за интонацией</string>
    <string name="phonetics3_task3_model">Модель: Это ресторан? (кафе) - Нет, это не ресторан, это кафе</string>

    <!-- Урок 4, фонетика, задание 3 -->
    <string name="listen_repeat">Слушайте и повторяйте</string>

    <!-- Урок 4, фонетика, задание 2 -->
    <string name="readWords">Прочитайте слова, соблюдая правила чтения</string>

    <!-- Урок 3, грамматика, задание 5 -->
    <string name="grammar3_task5_text">Прочитайте текст. Вставьте местоимения <b>«Мой»</b>, <b>«Моя»</b>, <b>«Моё»</b>, <b>«Меня»</b>, <b>«Его»</b>, <b>«Её»</b>, <b>«Вас»</b>.</string>

    <!-- Урок 3, грамматика, задание 4 -->
    <string name="grammatical_construction">Грамматическая конструкция</string>
    <string name="my_name_is">Меня зовут…\n- Как вас зовут?\n- <b>Меня</b> зовут Андрей</string>

    <!-- Урок 3, грамматика, задание 3 -->
    <string name="yes_not_no">да ≠ нет</string>
    <string name="grammar3_task3_text">Посмотрите на рисунки и прочитайте вопросы к ним. Ответьте на вопросы по модели</string>
    <string name="grammar3_task3_model">Модель: Это стол? – Да, это стол. (Нет, это не стол, это стул.)</string>

    <!-- Урок 3, грамматика, задание 2 -->
    <string name="grammar3_task2_text">Посмотрите на рисунки. Составьте предложения по модели.</string>
    <string name="grammar3_task2_model">Модель: Это моя собака</string>

    <!-- Урок 3, грамматика, задание 1 -->
    <string name="grammar3_task1_text">Прочитайте слова и составьте предложения по модели.</string>
    <string name="grammar3_task1_model">Модель: Это я (друг). – Это мой друг</string>

    <!-- Урок 2, грамматика-теория -->
    <string name="grammar2_animate">Одушевлённые имена существительные отвечают на вопрос <b>«Кто»</b>?\nК ним относятся названия людей и животных</string>
    <string name="grammar2_inanimate">Неодушевлённые имена существительные отвечают на вопрос <b>«Что»</b>?\nК ним относятся названия неживых предметов, растений и явлений окружающего мира</string>

    <!-- Урок 2, грамматика-практика, задание 8 -->
    <string name="grammar2_task8_text">Прочитайте диалоги. Следите за интонацией</string>

    <!-- Урок 2, грамматика-практика, задание 7 -->
    <string name="grammar2_task7_text">Посмотрите на рисунки и назовите, что изображено на ней. Составьте предложения по модели</string>
    <string name="grammar2_task7_model">Модель: Мальчик. - Это он</string>

    <!-- Урок 2, грамматика-практика, задание 6 -->
    <string name="grammar2_task6_text">Прочитайте слова, распределите их по родам</string>

    <!-- Урок 2, грамматика-практика, задание 5 -->
    <string name="grammar2_task5_text">Посмотрите на рисунки. Задайте вопросы <b>«Что это?»</b>  или <b>«Кто это?»</b> и ответьте на них</string>

    <!-- Урок 2, грамматика-практика, задание 4 -->
    <string name="grammar2_task4_text">Прочитайте диалоги. Разыграйте их с друзьями по группе</string>

    <!-- Урок 2, грамматика-практика, задание 3 -->
    <string name="grammar2_task3_text">Ответьте на вопросы, используя имена</string>
    <string name="grammar2_task3_model">Модель: Кто это? - Это Николай</string>

    <!-- Урок 2, грамматика-практика, задание 2 -->
    <string name="grammar2_task2_text">Ответьте на вопросы, используя данные слова</string>
    <string name="grammar2_task2_model">Модель: Что это? - Это класс\nМодель: Кто это? - Это преподаватель</string>

    <!-- Урок 2, грамматика-практика, задание 2 -->
    <string name="grammar2_task1_text">Ответьте на вопрос по модели</string>
    <string name="grammar2_task1_model">Модель: -Это дом? - Да, дом</string>

    <!-- Урок 4, грамматика, задание 6 -->
    <string name="grammar4_task6_text">Прочитайте предложения. Вставьте <b>«Почему»</b>, <b>«Потому что»</b> или <b>«Лучше чем»</b>.</string>

    <!-- Урок 4, грамматика, задание 5 -->
    <string name="grammar4_task5_text">Составьте предложения по модели</string>
    <string name="grammar4_task5_model">Модель: Анна, Россия - Это Анна. Она из России. Анна русская. Она знает русский язык и хорошо говорит по-русски, потому что это её родной язык.</string>

    <!-- Урок 4, грамматика, задание 4 -->
    <string name="grammar4_task4_text">Прочитайте текст. Вставьте подходящие по смыслу слова</string>

    <!-- Урок 4, грамматика, задание 2 -->
    <string name="grammar4_task2_text">Составьте предложения по модели</string>
    <string name="grammar4_task2_model">Модель: Это я. - _____ есть брат. - У меня есть брат</string>

    <!-- Урок 4, грамматика, задание 1 -->
    <string name="grammar4_task1_text">Слушайте. Повторяйте</string>
    <string name="grammar4_task1_model">У меня есть...</string>
</resources>