<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/explanationCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/tv1"
            style="@style/titleExplanationText"
            android:text="@string/remember"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv2"
            style="@style/sectionExplanationText"
            android:text="@string/grammar2_animate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1"/>

        <ImageView
            android:id="@+id/iv2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/daughter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintBottom_toTopOf="@id/line"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok_button"
            style="@style/confirmationButtons"
            android:text="@string/clearText"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>