<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/explanationCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/tv1"
            style="@style/titleExplanationText"
            android:text="@string/grammatical_construction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv2"
            style="@style/sectionExplanationText"
            android:text="@string/my_name_is"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1"/>

        <TextView
            android:id="@+id/tv3"
            style="@style/titleExplanationText"
            android:text="@string/remember"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2"/>

        <TableLayout
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3"
            app:layout_constraintBottom_toTopOf="@id/ok_button">
            <TableRow
                android:layout_margin="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Я - Меня\nТы - Тебя\nОн - Его\nОна - Её"
                    android:layout_marginEnd="10dp"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Мы - Вас\nВы - Вас\nОни - Их"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </TableRow>
            <TableRow
                android:layout_margin="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="Его зовут Антон\nАлександр\nВиктор\nИгорь\nСергей"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Её зовут Оля\nИрина\nМарина\nТамара\nСветлана"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok_button"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="Понятно"
            android:gravity="center"
            android:textSize="35sp"
            android:textAllCaps="false"
            android:background="@drawable/button_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/table"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>